feature: Add endpoints updated